Fixing session middleware