@@ -15,25 +15,25 @@
                  [day8.re-frame/http-fx "v0.2.0"]        ;; A re-frame effects handler for performing Ajax tasks
                  [digest "1.4.9"]                        ;; Message digest library for Clojure.
                  [funcool/struct "1.4.0"]                ;; Structural validation library for Clojure(Script)
-                 [luminus-immutant "0.2.5"]              ;; Serve web requests using Ring handlers, Servlets, or Undertow HttpHandlers
                  [luminus-migrations "0.6.5"]            ;; Migrations library for Luminus
                  [luminus-transit "0.1.2"]               ;; Transit helpers
                  [markdown-clj "1.10.1"]                 ;; MD support
                  [metosin/muuntaja "0.6.6"]              ;; library for fast http api format negotiation, encoding and decoding.
-                 [metosin/reitit "0.3.10"]               ;; A fast data-driven router for Clojure(Script).
-                 [metosin/ring-http-response "0.9.1"]    ;; Handling HTTP Statuses with Clojure(Script)
+                 [metosin/reitit "0.3.10" :exclusions [joda-time]] ;; A fast data-driven router for Clojure(Script).
+                 [metosin/ring-http-response "0.9.1" :exclusions [joda-time]]    ;; Handling HTTP Statuses with Clojure(Script)
                  [mount "0.1.16"]                        ;; managing Clojure and ClojureScript app state
                  [org.clojure/clojure "1.10.1"]          ;; The sweet core!!
                  [org.clojure/clojurescript "1.10.597"]
                  [org.clojure/tools.cli "0.4.2"]         ;; parses command line arguments and stuff like that
-                 [org.clojure/tools.logging "0.4.1"]
+                 [org.clojure/tools.logging "0.4.1"]     ;; Logs duh!
+                 [org.immutant/web "2.1.10" :exclusions [joda-time]] ;; Serve web requests using Ring handlers, Servlets, or Undertow HttpHandlers
                  [org.postgresql/postgresql "42.2.9"]    ;; PostgreSQL rulez!
                  [re-frame "0.11.0-rc3"]                 ;; A Reagent Framework For Writing SPAs, in Clojurescript.
                  [reagent "0.9.0-rc3"]                   ;; Minimalistic React for ClojureScript
-                 [ring-webjars "0.2.0"]                  ;; Web assets
+                 [ring-webjars "0.2.0" :exclusions [joda-time]] ;; Web assets
                  [ring/ring-core "1.8.0"]                ;; A very thin HTTP abstraction
-                 [ring/ring-defaults "0.3.2"]            ;; Ring middleware defaults: wrap-multipart-params, wrap-cookies, wrap-flash, etc.
-                 [ring-ttl-session "0.3.1"]              ;; Ring's TTL (time to live) session
+                 [ring/ring-defaults "0.3.2" :exclusions [joda-time]] ;; Ring middleware defaults: wrap-multipart-params, wrap-cookies, wrap-flash, etc.
+                 [ring-ttl-session "0.3.1" :exclusions [joda-time]]   ;; Ring's TTL (time to live) session
                  [selmer "1.12.12"]                      ;; Templates
                  [slugify "0.0.1"]]
   :managed-dependencies [[org.clojure/core.rrb-vector "0.0.13"]]  ;; necessary for JDK 11
@@ -62,20 +62,20 @@
             :dev      [:project/dev :profiles/dev]
             :test     [:project/dev :project/test :profiles/test]
 
-            :project/dev  {:jvm-opts ["-Dconf=dev-config.edn"]
+            :project/dev  {:jvm-opts ["-Dconf=dev-config.edn" "--illegal-access=warn"]
                            :dependencies [[binaryage/devtools "0.9.11"]              ;; CLJS DevTools
-                                          [com.bhauman/figwheel-main "0.2.3"]        ;; Hot Reload cljs
+                                          [com.bhauman/figwheel-main "0.2.3" :exclusions [joda-time]]        ;; Hot Reload cljs
                                           [com.bhauman/rebel-readline-cljs "0.1.4"]  ;; Terminal readline library for Clojure dialects
                                           [doo "0.1.11"]                             ;; Library and lein plugin to run cljs.test on different JS environments
                                           [enlive "1.1.6"]
                                           [factory-time "0.1.2"]                     ;; Factory-bot like library for tests
-                                          [prone "2019-07-08"]                       ;;  Better exception reporting middleware for Ring.
-                                          [ring/ring-devel "1.8.0"]                  ;;  Ring dev options
-                                          [ring/ring-mock "0.4.0"]]                  ;;  Library to create mock Ring requests for unit tests
+                                          [prone "2019-07-08"]                       ;; Better exception reporting middleware for Ring.
+                                          [ring/ring-devel "1.8.0"]                  ;; Ring dev options
+                                          [ring/ring-mock "0.4.0"]]                  ;; Library to create mock Ring requests for unit tests
                            :source-paths ["env/dev/clj" "target" "env/dev/cljs"]
                            :resource-paths ["env/dev/resources"]
                            :repl-options {:init-ns user :timeout 120000}}
-             :project/test {:jvm-opts ["-Dconf=test-config.edn"]
+             :project/test {:jvm-opts ["-Dconf=test-config.edn" "--illegal-access=warn"]
                             :dependencies [[com.jakemccrary/lein-test-refresh "0.24.1"]
                                            [lein-autoexpect "1.9.0"]]
                             :resource-paths ["env/test/resources"]
